Wordle con Vector de Palabras Aleatorias
HTML-CSS-JavaScript

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Wordle PPY</h1>
     <input type="text" id="guess-input" autocomplete="off">
     <button  id="guess-button">Intentar</button>
-    <button  id="try-again">Volver a Intentar</button>
+    <button  id="try-again">Volver a jugar</button>
     <button class="ayuda" id="boton-ayuda">Ayuda</button>
  
     <div id="informacion"> 
